utility-emissions-channel/aws-kubernetes/utilityemissions-api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: utilityemissions-api
  namespace: fabric-production
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 9000
    - name: https
      port: 443
      targetPort: 9000
  selector:
    app: utilityemissions-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: utilityemissions-api
  labels:
    app: utilityemissions-api
spec:
  selector:
    matchLabels:
      app: utilityemissions-api
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: utilityemissions-api
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: utilityemissions-api
          image: krybalko/utilityemissions-api:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: config
              mountPath: "/config"
              readOnly: true
            - name: utilityemissions-api-server-pvc
              mountPath: /appdata
      volumes:
        # You set volumes at the Pod level, then mount them into containers inside that Pod
        - name: config
          configMap:
            # Provide the name of the ConfigMap you want to mount.
            name: utilityemissions-api-config
            # An array of keys from the ConfigMap to create as files
            items:
            - key: "connection-opentaps.json"
              path: "connection-opentaps.json"
        - persistentVolumeClaim:
            claimName: utilityemissions-api-pvc
          name: utilityemissions-api-server-pvc
