utility-emissions-channel/aws-kubernetes/ingress-app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: utilityemissions-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path:
        backend:
          serviceName: utilityemissions-api
          servicePort: 80
