utility-emissions-channel/aws-kubernetes/ingress-fabric-services-deploy.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fabric-production-ingress
  namespace: fabric-production
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  # Route to fabric-ca
  - host: fabric-ca.opentaps.net
    http:
      paths:
      - path: /
        backend:
            serviceName: fabric-ca
            servicePort: 7054
  # Route to peer
  - host: fabric-peer.opentaps.net
    http:
      paths:
      - path: /
        backend:
            serviceName: fabric-peer
            servicePort: 7051
  # Route to orderer
  - host: fabric-orderer.opentaps.net
    http:
      paths:
      - path: /
        backend:
            serviceName: fabric-orderer
            servicePort: 7050
  # Route to api
  - host: utilityemission.opentaps.net
    http:
      paths:
      - path: /
        backend:
            serviceName: utilityemissions-api
            servicePort: 9000
